# ROS-Academy-for-Beginners

./: README.md
kuka_arm/: CMakeLists.txt  package.xml
kuka_arm/config/: forward_kinematics.rviz  kr210_controllers.yaml  kuka_arm.rviz  target_spawn_locations.yaml
kuka_arm/include/kuka_arm/: trajectory_sampler.h
kuka_arm/launch/: cafe.launch  empty_world.launch  forward_kinematics.launch  inverse_kinematics.launch  load_urdf.launch  robot_control.launch  robot_description.launch  spawn_target.launch  target_description.launch
kuka_arm/meshes/gripper/: finger_left.dae  finger_left_collision.dae  finger_right.dae  gripper_base.dae
kuka_arm/models/kinematics_bin/: kinematics_bin.dae  model.config  model.sdf
kuka_arm/models/kinematics_shelf/: kinematics_shelf.dae  model.config  model.sdf
kuka_arm/scripts/: IK_server.py  frames.gv  safe_spawner.sh  target_spawn.py
kuka_arm/src/: trajectory_sampler.cpp
kuka_arm/srv/: CalculateIK.srv
kuka_arm/urdf/: kr210.gazebo.xacro  kr210.urdf.xacro  target.urdf.xacro
kuka_arm/worlds/: cafe.world
msgs_demo/: CMakeLists.txt  README.md  package.xml
msgs_demo/action/: AddTwoInts.action  AutoDocking.action  GetMap.action  MoveBase.action
msgs_demo/msg/: CloudCamera.msg  DebugSensor.msg  DockInfraRed.msg  Imu.msg  ImuNine.msg  ImuYRP.msg  InfraRed.msg  KeyboardInput.msg  LaserScan.msg  Lift.msg  NaviState.msg  Odometry.msg  Point.msg  Pose.msg  PoseStamped.msg  PoseWithCovariance.msg  Power.msg  Quaternion.msg  SensorState.msg  Twist.msg  TwistWithCovariance.msg  Vector3.msg  XbotState.msg
msgs_demo/msg/geometry_msgs/: Accel.msg  AccelWithCovariance.msg  AccelWithCovarianceStamped.msg  Inertia.msg  InertiaStamped.msg  Point.msg  Point32.msg  PointStamped.msg  Polygon.msg  PolygonStamped.msg  Pose.msg  Pose2D.msg  PoseArray.msg  PoseStamped.msg  PoseWithCovariance.msg  PoseWithCovarianceStamped.msg  Quaternion.msg  QuaternionStamped.msg  Transform.msg  TransformStamped.msg  Twist.msg  TwistStamped.msg  TwistWithCovariance.msg  TwistWithCovarianceStamped.msg  Vector3.msg  Vector3Stamped.msg  Wrench.msg  WrenchStamped.msg
msgs_demo/msg/nav_msgs/: GridCells.msg  MapMetaData.msg  OccupancyGrid.msg  Odometry.msg  Path.msg
msgs_demo/msg/sensor_msgs/: BatteryState.msg  CameraInfo.msg  ChannelFloat32.msg  CompressedImage.msg  Image.msg  Imu.msg  JointState.msg  LaserEcho.msg  LaserScan.msg  MultiDOFJointState.msg  MultiEchoLaserScan.msg  NavSatFix.msg  NavSatStatus.msg  PointCloud.msg  PointCloud2.msg  PointField.msg  Range.msg  RegionOfInterest.msg  RelativeHumidity.msg  Temperature.msg  TimeReference.msg
msgs_demo/msg/std_msgs/: Bool.msg  Byte.msg  ByteMultiArray.msg  Char.msg  ColorRGBA.msg  Duration.msg  Empty.msg  Float32MultiArray.msg  Float64.msg  Float64MultiArray.msg  Header.msg  Int16MultiArray.msg  Int32MultiArray.msg  Int64.msg  Int64MultiArray.msg  Int8MultiArray.msg  MultiArrayLayout.msg  Time.msg  UInt16MultiArray.msg  UInt32.msg  UInt32MultiArray.msg  UInt64.msg  UInt8MultiArray.msg
msgs_demo/srv/: AddTwoInts.srv  Empty.srv  GetMap.srv  GetPlan.srv  SetBool.srv  SetCameraInfo.srv  SetMap.srv  TalkerListener.srv  Trigger.srv
navigation_sim_demo/: CMakeLists.txt  README.md  package.xml  test_map.pgm
navigation_sim_demo/launch/: amcl_demo.launch  amcl_with_ekf.launch  gmapping_demo.launch  navigation_demo.launch  odometry_localization_demo.launch  view_navigation.launch
navigation_sim_demo/launch/include/: asus_xtion_pro_amcl.launch.xml  asus_xtion_pro_gmapping.launch.xml  move_base.launch.xml  robot_amcl.launch.xml  safety_controller.launch.xml  velocity_smoother.launch.xml
navigation_sim_demo/maps/: Software_Museum.pgm  Software_Museum.yaml  map_default.pgm  map_default.yaml
navigation_sim_demo/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
navigation_sim_demo/rviz/: navigation.rviz
robot_sim_demo/: CMakeLists.txt  README.md  package.xml
robot_sim_demo/launch/: robot_spawn.launch
robot_sim_demo/launch/include/: xbot-u.launch.xml  xbot2.launch.xml
robot_sim_demo/meshes/: sick_tim571.stl
robot_sim_demo/models/ISCAS_Museum/: model.config  model.sdf
robot_sim_demo/param/: mux.yaml  xbot-u_control.yaml  xbot2_control.yaml
robot_sim_demo/scripts/: robot_keyboard_teleop.py
robot_sim_demo/urdf/: infrared.xacro  materials.xacro  robot.xacro  sick_tim.gazebo.xacro  sick_tim.urdf.xacro  sonar.xacro  xbot-u.gazebo  xbot-u.urdf.xacro  xbot2.gazebo  xbot2.urdf.xacro
robot_sim_demo/worlds/: ROS-Academy.world
ros_academy_for_beginners/: CMakeLists.txt  README.md  package.xml
simple_arm/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
simple_arm/config/: controllers.yaml
simple_arm/launch/: robot_control.xml  robot_description.xml  robot_spawn.launch  take_photo.launch
simple_arm/scripts/: .simple_mover.py.swp  arm_mover  keyboard_photo_client.py  keyboard_photo_client2.py  keyboard_photo_server.py  simple_mover.py
simple_arm/src/: simple_mover_c.cpp
simple_arm/srv/: TakePhotoCommand.srv
simple_arm/urdf/: simple_arm.gazebo.xacro  simple_arm.urdf.xacro
simple_arm/worlds/: ROS-Academy.world  willow_garage.world
simple_robot/: CMakeLists.txt  README.md  package.xml
simple_robot/config/: controllers.yaml
simple_robot/launch/: robot_control.xml  robot_description.xml  robot_spawn.launch  take_photo.launch
simple_robot/scripts/: arm_mover  keyboard_photo_client2.py  keyboard_photo_server.py  simple_mover
simple_robot/src/: simple_mover_c.cpp
simple_robot/srv/: Exam.srv  GoToPosition.srv
simple_robot/urdf/: simple_robot.gazebo.xacro  simple_robot.urdf.xacro
slam_sim_demo/: CMakeLists.txt  README.md  package.xml
slam_sim_demo/launch/: amcl_demo.launch  cartographer_demo.launch  gmapping_demo.launch  hector_demo.launch  karto_demo.launch  view_slam.launch
slam_sim_demo/maps/: Software_Museum.pgm
slam_sim_demo/param/: cartographer_params.lua
slam_sim_demo/rviz/: cartographer.rviz  slam.rviz
(+236 files in other folders)
