<?xml version="1.0"?>
<package>
		<name>msgs_demo</name>
		<version>0.0.1</version>
		<description>The msgs_demo package</description>

		<maintainer email="hanjf_robin@163.com">robin.han</maintainer>


		<license>BSD</license>


		<buildtool_depend>catkin</buildtool_depend>
															    
		<build_depend>roscpp</build_depend>
		<build_depend>rospy</build_depend>
		<build_depend>std_msgs</build_depend>
		<build_depend>nav_msgs</build_depend>
		<build_depend>sensor_msgs</build_depend>
		<build_depend>std_srvs</build_depend>
		<build_depend>actionlib_msgs</build_depend>
		<build_depend>message_generation</build_depend>

																	  
		<run_depend>roscpp</run_depend>
		<run_depend>rospy</run_depend>
		<run_depend>std_msgs</run_depend>
		<run_depend>nav_msgs</run_depend>
		<run_depend>sensor_msgs</run_depend>
		<run_depend>std_srvs</run_depend>
		<run_depend>actionlib_msgs</run_depend>
		
		<run_depend>message_runtime</run_depend>

		<export>

		</export>
</package>

