<package>
  <name>robot_sim_demo</name>
  <version>0.0.1</version>
  <description>
    The xbot2 robot simulation to demonstrate the computing graph and communication of ROS.
  </description>
  <author>Changkun</author>
  <maintainer email="chaichangkun@163.com"></maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>image_view</run_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models/"/>
  </export>
</package>
