<?xml version="1.0"?>
<package>
  <name>simple_arm</name>
  <version>0.0.0</version>
  <description>The simple_arm package</description>

  <maintainer email="harsh@electricmovement.com">harsh</maintainer>

  <license>TODO</license>

  <author email="brandon@electricmovment.com">Brandon Kinman</author>
  <author email="harsh@electricmovement.com">Harsh Pandya</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models/"/> 
  </export>

</package>
